Fixing broken styles

--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,6 @@ text.axis-worktime {
   margin-bottom: 10px;
 }
 
-.title span {
-  margin-left: 50px;
-}
-
 .heatMap {
   padding-top: 10px;
   text-align: center;
